# OkZoomer

./: .gitignore  Cargo.toml
src/: com.rs  main.rs  settings.rs
src/logic/: controller.rs  mod.rs  view.rs  view_dir.rs  view_file.rs  view_item.rs
src/ui/: instructions.rs  interpreter.rs  mod.rs  window.rs
