[package]
name = "ok_zoomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.0"
serde_json = {version = "1.0.68"}
serde = {version = "1.0.130", features = ["derive"]}
eframe = "0.20.0"
egui_extras = "0.20.0"
rand = "0.8.5"